@@ -1,33 +1,50 @@
 package model;
 
-import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import javax.xml.namespace.QName;
-import javax.xml.ws.Service;
-
+import jakarta.xml.ws.Service;
 
 public class Client {
 	
-	public static void main(String[] args) throws MalformedURLException {
+	public static void main(String[] args) {
 		
-		URL wsdlURL= new URL("http://localhost:8888/ws/Etudiant?wsdl");
-		//check above URL in browser, you should see wsdlfile
+		try {
+			URL wsdlURL = URI.create("http://localhost:8084/service?wsdl").toURL();
 		
-		//create QName using targetNamespace and name
-		QName qname = new QName("http://service.info.com/", "GestionEtudiantsServiceImpl");
+		// Créer QName avec le targetNamespace et le nom du service
+		QName qname = new QName("http://model/", "GestionEtudiantsServiceImplService");
 		Service service = Service.create(wsdlURL, qname);
 		
-		//we need to pass interface and model beans to client
-		GestionEtudiantService ps = service.getPort(GestionEtudiantService.class);
+		// Obtenir le port du service
+		GestionEtudiantService etudiantService = service.getPort(GestionEtudiantService.class);
 		
-		Etudiant p1 = new Etudiant(); p1.setNom("chamseddine doula"); p1.setId(1); p1.setAge(20);
-		Etudiant p2 = new Etudiant(); p2.setNom("chokri yassine"); p2.setId(2); p2.setAge(20);
-		Etudiant p3 = new Etudiant(); p3.setNom("yaacoub eya"); p3.setId(3); p3.setAge(41);
+		// Créer des étudiants de test
+		Etudiant e1 = new Etudiant("Doula", "Chamseddine", "2000-01-15", "4TWIN");
+		Etudiant e2 = new Etudiant("Chokri", "Yassine", "2000-05-20", "4TWIN");
+		Etudiant e3 = new Etudiant("Yaacoub", "Eya", "2000-08-10", "4TWIN");
 		
-		//add Person
-		System.out.println("Add Person Status="+ps.AjouterEtudiant(p1));
-		System.out.println("Add Person Status="+ps.AjouterEtudiant(p2));
-		System.out.println("Add Person Status="+ps.AjouterEtudiant(p3));
+		// Ajouter des étudiants
+		System.out.println("Ajout étudiant 1: " + etudiantService.ajouterEtudiant(e1));
+		System.out.println("Ajout étudiant 2: " + etudiantService.ajouterEtudiant(e2));
+		System.out.println("Ajout étudiant 3: " + etudiantService.ajouterEtudiant(e3));
+		
+		// Récupérer tous les étudiants
+		System.out.println("\n=== Liste des étudiants ===");
+		etudiantService.getAllEtudiants().forEach(e -> 
+			System.out.println(e)
+		);
+		
+		// Test de récupération d'un étudiant par ID
+		System.out.println("\n=== Récupération de l'étudiant ID=1 ===");
+		Etudiant etudiant = etudiantService.getEtudiant(1);
+		if (etudiant != null) {
+			System.out.println(etudiant);
+		}
+		
+		} catch (Exception e) {
+			System.err.println("Erreur: " + e.getMessage());
+			e.printStackTrace();
+		}
 	}
-
 }
